[tool.poetry]
name = "oauth-token-cache"
version = "0.1.0"
description = "Easily obtain and cache OAuth 2.0 JWT tokens from Auth0."
authors = ["Nikolai Gulatz <nikolai.gulatz@posteo.de>"]
license = "MIT"
homepage = "https://github.com/NikolaiGulatz/oauth-token-cache"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.22"
redis = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.14"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pylint = "^2.4"
freezegun = "^0.3.12"
pytest-vcr = "^1.0"
pdoc = "^0.3.2"
pytest-cov = "^2.8"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
